force-app/main/default/objects/IME_Signatory_Contact__c/IME_Signatory_Contact__c.object-meta.xml
<CustomObject>
    <description>Docusign eSignature functionality for the UK Contracts team (Case 01200457)</description>
    <label>Signatory Contact</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Signatory Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signatory Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>