force-app/main/default/objects/IME_Signatory_Contact__c/fields/IME_Contact__c.field-meta.xml
<CustomField>
    <fullName>IME_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Signatory Contact</relationshipLabel>
    <relationshipName>DocuSign_Envelope_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>