force-app/main/default/objects/IME_Signatory_Contact__c/fields/IME_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>IME_Contact_Email__c</fullName>
    <formula>IME_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>