force-app/main/default/objects/IME_Signatory_Contact__c/fields/IME_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>IME_Contact_Name__c</fullName>
    <formula>IME_Contact__r.FirstName &amp; &quot; &quot; &amp; IME_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>