force-app/main/default/objects/IME_Signatory_Contact__c/fields/IME_DocuSign_Contract_Envelope__c.field-meta.xml
<CustomField>
    <fullName>IME_DocuSign_Contract_Envelope__c</fullName>
    <label>Signature Information</label>
    <referenceTo>IME_Signature_Information__c</referenceTo>
    <relationshipLabel>Signatory Contact</relationshipLabel>
    <relationshipName>DocuSign_Envelope_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>