force-app/main/default/objects/IME_Signatory_Contact__c/fields/IME_Routing_Order__c.field-meta.xml
<CustomField>
    <fullName>IME_Routing_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Routing Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>